Fix CSS syntax and add width and text alignment

--- a/stopwatch/styles.css
+++ b/stopwatch/styles.css
@@ -11,5 +11,7 @@
     left: 50%;
     transform: 
         translate(-50%, -50%);
-    font-size: 80px
+    font-size: 80px;
+    width: 80vw;
+    text-align: center;
 }
